<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".User.SignUpAcademicsDetails">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue1"
        app:title="Academics Details"
        app:titleTextColor="@color/white"
        android:id="@+id/toolbar_sign_academics"/>
    <ImageView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/signup_academics_backgroud"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acamemics_details"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:background="@drawable/border_layout"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_user_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_user_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#546E7A"
                android:singleLine="true"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:padding="7dp"
            android:background="@drawable/border_layout">
            <TextView
                android:id="@+id/signup_user_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/dob"
                android:textColorHint="#1D1D1D"
                android:background="@null"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="15sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="end"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/dob_pick"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/date_picker_image"/>
            </LinearLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:background="@drawable/border_layout"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/gender"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="40dp"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
                <RadioButton
                    android:id="@+id/transgender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"/>
            </RadioGroup>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="12dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/signup_submit_userInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_info_and_next"/>




        </LinearLayout>
    </LinearLayout>

</LinearLayout>
</ScrollView>