<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".User.UserSignUp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blue">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="14dp">

        </TextView>
    </LinearLayout>
<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        tools:ignore="UselessParent">-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/kdk_photo" />

        <LinearLayout
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_up_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_to_educonnect"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_marginStart="15dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/educonnectlogo"
                    android:contentDescription="@string/todo"/>
            </LinearLayout>
            <TextView
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/educonnect_acts_a_bridging_platform_between_student_and_education"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/google_verification"
          android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/border_layout"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            tools:ignore="VisualLintBounds">
            <ImageView
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/google_logo"
                tools:ignore="VisualLintBounds" />
            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_google"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:gravity="bottom"
            tools:ignore="VisualLintBounds">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kindly_use_the_contact_number_that_you_used_during_admission"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:paddingTop="15dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                tools:ignore="VisualLintBounds" />
            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_continuing_you_agree_that_you_have_read_and_accept_our"
                android:textSize="14sp"/>
            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_amp_c_and_privacy_and_policy"
                android:textSize="13sp"
                android:textColor="#0000EE" />

    </LinearLayout>
    </LinearLayout>
<!--    </ScrollView>-->
</LinearLayout>